[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/styles/theme_independant/specific_image_viewer_thumbnail_pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/components/specific_image_viewer_thumbnail.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Thumbnail" type="Button"]
margin_right = 2420.0
margin_bottom = 1566.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = SubResource( 6 )
icon_align = 1
expand_icon = true
script = ExtResource( 2 )

[node name="SelectedFrame" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="HoverIndicator" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.392157 )

[connection signal="focus_entered" from="." to="." method="_on_Thumbnail_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Thumbnail_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Thumbnail_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Thumbnail_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Thumbnail_mouse_exited"]
